# Document_Semantic_Search

./: .env  .gitignore  README.md  STREAMLIT_README.md  architecture_diagram.html  demo_semantic_chunking.py  mkdocs.yml  pyproject.toml  run.sh  run_streamlit.py  streamlit_app.py
docs/: index.md
docs/notebooks/: parsedocuments.ipynb
qdrant_storage/: raft_state.json
qdrant_storage/collections/patent_semantic_search/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/patent_semantic_search/0/segments/8b1298e0-ce8b-4700-9726-b63829bdfa50/: mutable_id_tracker.mappings
qdrant_storage_backup/collections/college_pathway_search/0/: newest_clocks.json
qdrant_storage_backup/collections/college_pathway_search/0/segments/0e2aa265-e030-4532-9e45-df7ff5d84608/: mutable_id_tracker.mappings
qdrant_storage_backup/collections/college_pathway_search/0/segments/25b3913a-ebd6-4ac0-94d0-bd5b13ae82a1/: mutable_id_tracker.mappings
qdrant_storage_backup/collections/patent_semantic_search/0/segments/075af678-5ce4-4713-b993-0499fe1a17c5/: mutable_id_tracker.mappings
qdrant_storage_backup/collections/patent_semantic_search/0/segments/202a3588-00ae-4ce9-89ef-26340f02ecfe/: mutable_id_tracker.mappings
src/: Embedding_Storing  Embedding_Storing.py  Inference_Server_Model  Load_Documents.py  Markup_Chunking.py  Retreiving_Data_Qdrant  Retreiving_Data_Qdrant.py  Semantic_Search.py  download_edu.py  prompt_paraphase.py  recontext_chunking.py  save_patents_mongodb.py  search.py
src/Document_Semantic_Search/: paraphrase.py  processfile.py
(+53 files in other folders)
