[project]
name = "document-semantic-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chonkie>=1.3.1",
    "docling>=2.55.1",
    "numpy>=1.21.0",
    "ollama>=0.1.7",
    "sentence-transformers>=2.2.2",
    "svlearn-bootcamp>=0.1.7",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "torch>=2.0.0",
    "streamlit>=1.28.0",
    "qdrant-client>=1.15.1",
    "detoxify>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    # ... other includes like README, pyproject.toml, etc.
]

[tool.hatch.build.targets.wheel]
packages = ["src/Document_Semantic_Search"]
